--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
     "name": "AR.IO WayFinder",
-    "version": "0.0.1",
-    "description": "WayFinder streamlines access to the Permaweb through the AR.IO Network and Arweave Name System.",
+    "version": "0.0.2",
+    "description": "WayFinder (Alpha) streamlines access to the Permaweb through the AR.IO Network and Arweave Name System.",
     "permissions": ["storage", "webNavigation", "webRequest"],
     "background": {
       "service_worker": "background.js"
