--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "AR.IO WayFinder",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "description": "WayFinder (Alpha) streamlines access to the Permaweb through the AR.IO Network and Arweave Name System.",
     "permissions": ["storage", "webNavigation", "webRequest"],
     "background": {
@@ -11,6 +11,12 @@
     "action": {
       "default_popup": "popup.html"
     },
+    "content_scripts": [
+      {
+          "matches": ["<all_urls>"],
+          "js": ["content.js"]
+      }
+    ],
     "content_security_policy": {
       "extension_pages": "script-src 'self'; object-src 'self';"
     },
