--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
     "manifest_version": 3,
     "name": "AR.IO WayFinder",
-    "version": "0.0.11",
+    "version": "0.0.12",
     "description": "WayFinder (Alpha) streamlines access to the Permaweb through the AR.IO Network and Arweave Name System.",
     "permissions": ["storage", "webNavigation", "webRequest"],
     "background": {
-      "service_worker": "background.js"
+      "service_worker": "dist/background.js"
     },
     "host_permissions": ["<all_urls>"],
     "action": {
@@ -14,16 +14,23 @@
     "content_scripts": [
       {
           "matches": ["<all_urls>"],
-          "js": ["content.js"]
+          "js": ["dist/content.js"]
       }
     ],
     "content_security_policy": {
       "extension_pages": "script-src 'self'; object-src 'self';"
     },
     "icons": {
-      "16": "icon16.png",
-      "48": "icon48.png",
-      "128": "icon128.png"
-   }
+      "16": "assets/icon16.png",
+      "48": "assets/icon48.png",
+      "128": "assets/icon128.png"
+    
+    },
+    "web_accessible_resources": [
+      {
+        "resources": ["dist/**/*"],
+        "matches": ["<all_urls>"]
+      }
+    ]
   }
   
