--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "description": "WayFinder (alpha) is a simple, open source, Google Chrome extension that intelligently routes users to optimal AR.IO gateways, ensuring streamlined access to the permaweb on Arweave.",
   "main": "background.js",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.8",
+    "@rollup/plugin-inject": "^5.0.5",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/chrome": "^0.0.268",
     "@types/node": "^20.12.12",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "rollup": "^2.79.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "stream-browserify": "^3.0.0",
     "typescript": "^5.4.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc && rollup -c"
   },
   "repository": {
     "type": "git",
@@ -22,5 +33,8 @@
   "bugs": {
     "url": "https://github.com/ar-io/wayfinder/issues"
   },
-  "homepage": "https://github.com/ar-io/wayfinder#readme"
+  "homepage": "https://github.com/ar-io/wayfinder#readme",
+  "dependencies": {
+    "@ar.io/sdk": "^1.1.0"
+  }
 }
