--- a/package.json
+++ b/package.json
@@ -2,26 +2,24 @@
   "name": "wayfinder",
   "version": "0.0.12",
   "description": "WayFinder (alpha) is a simple, open source, Google Chrome extension that intelligently routes users to optimal AR.IO gateways, ensuring streamlined access to the permaweb on Arweave.",
-  "main": "background.js",
+  "main": "index.js",
+  "type": "module",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.8",
-    "@rollup/plugin-inject": "^5.0.5",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
+    "clean-webpack-plugin": "^4.0.0",
     "@types/chrome": "^0.0.268",
     "@types/node": "^20.12.12",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
-    "rollup": "^2.79.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "stream-browserify": "^3.0.0",
-    "typescript": "^5.4.5"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "terser-webpack-plugin": "^5.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf dist",
-    "build": "npm run clean && tsc && rollup -c"
+    "build:ts": "tsc",
+    "build:webpack": "webpack",
+    "build": "npm run clean && npm run build:ts && npm run build:webpack"
   },
   "repository": {
     "type": "git",
