--- a/package.json
+++ b/package.json
@@ -2,24 +2,28 @@
   "name": "wayfinder",
   "version": "0.0.12",
   "description": "WayFinder (alpha) is a simple, open source, Google Chrome extension that intelligently routes users to optimal AR.IO gateways, ensuring streamlined access to the permaweb on Arweave.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
+  "browser": "dist/index.js",
   "devDependencies": {
-    "clean-webpack-plugin": "^4.0.0",
     "@types/chrome": "^0.0.268",
     "@types/node": "^20.12.12",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "html-webpack-plugin": "^5.6.0",
+    "terser-webpack-plugin": "^5.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "terser-webpack-plugin": "^5.0.0"
+    "webpack-dev-server": "^5.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf dist",
-    "build:ts": "tsc",
-    "build:webpack": "webpack",
-    "build": "npm run clean && npm run build:ts && npm run build:webpack"
+    "start": "webpack serve --mode development",
+    "build:webpack": "webpack --config webpack.config.mjs",
+    "build": "yarn clean && yarn build:webpack"
   },
   "repository": {
     "type": "git",
