--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "html-webpack-plugin": "^5.6.0",
+    "prettier": "^3.3.1",
     "terser-webpack-plugin": "^5.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
