--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "permissions": ["storage", "webNavigation", "webRequest"],
   "host_permissions": ["<all_urls>"],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "action": {
     "default_popup": "popup.html"
@@ -14,7 +15,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "type": "module"  
     }
   ],
   "content_security_policy": {
