--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "browser": "dist/index.js",
   "type": "module",
   "devDependencies": {
-    "@crxjs/vite-plugin": "^2.0.0-beta.23",
     "@types/chrome": "^0.0.268",
     "@types/node": "^20.12.12",
     "@vitejs/plugin-react": "^4.3.1",
@@ -38,6 +37,6 @@
   },
   "homepage": "https://github.com/ar-io/wayfinder#readme",
   "dependencies": {
-    "@ar.io/sdk": "1.2.0"
+    "@ar.io/sdk": "2.0.0-alpha.2"
   }
 }
