--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
   "devDependencies": {
     "@types/chrome": "^0.0.268",
     "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "biome": "^0.3.3",
+    "eslint": "^9.25.1",
+    "eslint-plugin-header": "^3.1.1",
     "prettier": "^3.3.1",
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
@@ -22,8 +27,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf dist",
     "start": "vite preview",
-    "format:fix": "prettier --write .",
-    "build": "vite build --config vite.config.js"
+    "build": "vite build --config vite.config.js",
+    "lint:fix": "biome check --write --unsafe && eslint --fix src",
+    "lint:check": "biome check --unsafe && eslint src",
+    "format:fix": "biome format --write",
+    "format:check": "biome format"
   },
   "repository": {
     "type": "git",
