chore(wayfinder): update routing strategies and popup

--- a/biome.json
+++ b/biome.json
@@ -62,7 +62,7 @@
 				"noDuplicateObjectKeys": "error",
 				"noDuplicateParameters": "error",
 				"noEmptyBlockStatements": "error",
-				"noExplicitAny": "error",
+				"noExplicitAny": "warn",
 				"noExtraNonNullAssertion": "error",
 				"noFallthroughSwitchClause": "error",
 				"noFunctionAssign": "error",
@@ -82,5 +82,8 @@
 			}
 		}
 	},
-	"javascript": { "formatter": { "quoteStyle": "single" }, "globals": [] }
+	"javascript": {
+		"formatter": { "quoteStyle": "single" },
+		"globals": ["chrome", "browser"]
+	}
 }
