--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,9 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist",
     "package.json",
@@ -35,12 +38,7 @@
     "@ar.io/sdk": ">=3.12.0"
   },
   "devDependencies": {
-    "@ar.io/sdk": "^3.13.0",
-    "@types/node": "^20.12.12",
-    "biome": "^1.9.4",
-    "c8": "^10.1.3",
-    "rimraf": "^5.0.5",
-    "typescript": "^5.2.2"
+    "@ar.io/sdk": "^3.13.0"
   },
   "keywords": [
     "ar-io",
