chore(biome): run biome formatter

--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "WayFinder monorepo containing the Chrome extension, core library, and React components",
   "private": true,
   "type": "module",
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": ["packages/*"],
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@changesets/cli": "^2.29.4",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
-    "biome": "^0.3.3",
     "eslint": "^9.25.1",
     "eslint-plugin-header": "^3.1.1",
     "ts-node": "^10.9.2",
@@ -24,7 +22,8 @@
     "lint:fix": "biome check --write --unsafe && eslint --fix packages/*/src",
     "lint:check": "biome check --unsafe && eslint packages/*/src",
     "format:fix": "biome format --write",
-    "format:check": "biome format"
+    "format:check": "biome format",
+    "verify": "node --import=./register.mjs scripts/verify.ts"
   },
   "repository": {
     "type": "git",
