--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,11 +9,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "files": [
-    "dist",
-    "package.json",
-    "README.md"
-  ],
+  "files": ["dist", "package.json", "README.md"],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -40,12 +36,7 @@
   "devDependencies": {
     "@ar.io/sdk": "^3.13.0"
   },
-  "keywords": [
-    "ar-io",
-    "arweave",
-    "wayfinder",
-    "ar://"
-  ],
+  "keywords": ["ar-io", "arweave", "wayfinder", "ar://"],
   "author": "AR.IO",
   "license": "Apache-2.0"
 }
