feat(verifier): add signature-verifier
This verifer fetches offset data within the bundle for a data item, and verfies it against the raw data returned by a gateway using deepHash from @dha-team/arbundles repo

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,6 +38,7 @@
     "format:check": "biome format"
   },
   "dependencies": {
+    "@dha-team/arbundles": "^1.0.3",
     "arweave": "^1.14.0",
     "eventemitter3": "^5.0.1",
     "plimit-lit": "^3.0.1",
