--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -21,12 +21,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Setup Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
-        node-version: '18.x'
+        node-version-file: '.nvmrc'
         cache: 'yarn'
 
     - name: Install dependencies
@@ -41,21 +41,6 @@ jobs:
     - name: Build extension
       run: yarn workspace @ar.io/wayfinder-extension build
       
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: wayfinder-extension-dist
-        path: packages/extension/dist/
-        
-    - name: Package Chrome extension
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      run: |
-        cd packages/extension/dist
-        zip -r ../../../wayfinder-extension.zip *
-        
-    - name: Upload packaged extension
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      uses: actions/upload-artifact@v3
-      with:
-        name: wayfinder-extension-zip
-        path: wayfinder-extension.zip
+    # TODO: Upload artifacts and use changeset for publishing new versions
+
+
