--- a/.github/workflows/monorepo.yml
+++ b/.github/workflows/monorepo.yml
@@ -25,12 +25,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Setup Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
-        node-version: '18.x'
+        node-version-file: '.nvmrc'
         cache: 'yarn'
 
     - name: Install dependencies
