--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "WayFinder monorepo containing the Chrome extension, core library, and React components",
   "private": true,
   "type": "module",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@changesets/cli": "^2.29.4",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
+    "c8": "^10.1.3",
     "eslint": "^9.25.1",
     "eslint-plugin-header": "^3.1.1",
     "ts-node": "^10.9.2",
