--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,7 +34,11 @@
     "@ar.io/sdk": ">=3.12.0"
   },
   "devDependencies": {
-    "@ar.io/sdk": "^3.13.0"
+    "@ar.io/sdk": "^3.13.0",
+    "@types/node": "^24.0.0",
+    "c8": "^10.1.3",
+    "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2"
   },
   "keywords": ["ar-io", "arweave", "wayfinder", "ar://"],
   "author": "AR.IO",
