--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -13,7 +13,7 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@ar.io/wayfinder": "*",
+    "@ar.io/wayfinder-core": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
