--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -31,7 +31,7 @@ jobs:
       run: yarn install --frozen-lockfile
 
     - name: Lint
-      run: yarn lint:check
+      run: yarn workspace @ar.io/wayfinder-core lint:check
 
   test:
     runs-on: ubuntu-latest
