--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -10,7 +10,12 @@
     "access": "public"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "clean": "rimraf dist",
+    "lint:fix": "biome check --write --unsafe",
+    "lint:check": "biome check --unsafe",
+    "format:fix": "biome format --write",
+    "format:check": "biome format"
   },
   "dependencies": {
     "@ar.io/wayfinder-core": "*",
@@ -19,7 +24,9 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "@types/react-dom": "^18.2.0",
+    "@biomejs/biome": "1.9.4",
+    "rimraf": "^6.0.1"
   },
   "peerDependencies": {
     "react": "^18.0.0",
