--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eslint": "^9.25.1",
     "eslint-plugin-header": "^3.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "rimraf": "^6.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
