--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,11 +35,7 @@
   },
   "devDependencies": {
     "@ar.io/sdk": "^3.13.0",
-    "@types/node": "^24.0.0",
-    "c8": "^10.1.3",
-    "@biomejs/biome": "1.9.4",
-    "rimraf": "^6.0.1",
-    "ts-node": "^10.9.2"
+    "@types/node": "^24.0.0"
   },
   "keywords": ["ar-io", "arweave", "wayfinder", "ar://"],
   "author": "AR.IO",
