--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -24,9 +24,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@biomejs/biome": "1.9.4",
-    "rimraf": "^6.0.1"
+    "@types/react-dom": "^18.2.0"
   },
   "peerDependencies": {
     "react": "^18.0.0",
