--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -27,19 +27,19 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version-file: '.nvmrc'
-        cache: 'yarn'
+        cache: 'npm'
 
     - name: Install dependencies
-      run: yarn install --frozen-lockfile
+      run: npm install --frozen-lockfile
 
     - name: Lint
-      run: yarn workspace @ar.io/wayfinder-extension lint:check
+      run: npm run lint:check -w @ar.io/wayfinder-extension
       
     - name: Build core library first
-      run: yarn workspace @ar.io/wayfinder-core build
+      run: npm run build -w @ar.io/wayfinder-core
       
     - name: Build extension
-      run: yarn workspace @ar.io/wayfinder-extension build
+      run: npm run build -w @ar.io/wayfinder-extension
       
     # TODO: Upload artifacts and use changeset for publishing new versions
 
