--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -27,18 +27,18 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version-file: '.nvmrc'
-        cache: 'yarn'
+        cache: 'npm'
 
     - name: Install dependencies
-      run: yarn install --frozen-lockfile
+      run: npm install --frozen-lockfile
 
     - name: Lint
-      run: yarn workspace @ar.io/wayfinder-react lint:check
+      run: npm run lint:check -w @ar.io/wayfinder-react
       
     - name: Build core library first
-      run: yarn workspace @ar.io/wayfinder-core build
+      run: npm run build -w @ar.io/wayfinder-core
       
     - name: Build React components
-      run: yarn workspace @ar.io/wayfinder-react build
+      run: npm run build -w @ar.io/wayfinder-react
     
     # TODO: Upload artifacts and use changeset for publishing new versions
