--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "WayFinder monorepo containing the Chrome extension, core library, and React components",
   "private": true,
   "type": "module",
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": ["packages/*"],
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@changesets/cli": "^2.29.4",
@@ -23,7 +21,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf packages/*/dist",
-    "build": "yarn workspaces run build",
+    "build": "npm run build --workspaces",
     "lint:fix": "biome check --write --unsafe && eslint --fix packages/*/src",
     "lint:check": "biome check --unsafe && eslint packages/*/src",
     "format:fix": "biome format --write",
@@ -40,6 +38,5 @@
   "bugs": {
     "url": "https://github.com/ar-io/wayfinder/issues"
   },
-  "homepage": "https://github.com/ar-io/wayfinder#readme",
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "homepage": "https://github.com/ar-io/wayfinder#readme"
 }
