--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -6,9 +6,11 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
+  "license": "Apache-2.0",
   "publishConfig": {
     "access": "public"
   },
+  "files": ["dist", "package.json", "README.md", "LICENSE"],
   "scripts": {
     "build": "tsc",
     "clean": "rimraf dist",
@@ -29,6 +31,5 @@
   "peerDependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
-  },
-  "license": "AGPL-3.0-only"
+  }
 }
