--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ar.io/wayfinder-extension",
-  "version": "0.0.15-beta.0",
+  "version": "0.0.15",
   "description": "WayFinder Chrome extension that intelligently routes users to optimal AR.IO gateways",
   "private": true,
   "type": "module",
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@ar.io/sdk": "^3.5.0",
-    "@ar.io/wayfinder-core": "0.0.2-beta.0",
+    "@ar.io/wayfinder-core": "0.0.2",
     "@permaweb/aoconnect": "0.0.69"
   }
 }
