chore(beta): release versions

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,7 +13,11 @@
     "wayfinder",
     "ar://"
   ],
-  "author": "Permanent Data Solutions, Inc.",
+  "author": {
+    "name": "Permanent Data Solutions Inc",
+    "email": "info@ar.io",
+    "website": "https://ar.io"
+  },
   "publishConfig": {
     "access": "public"
   },
