chore(git): update git workflows for release

--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -2,13 +2,13 @@ name: Core Library
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, alpha ]
     paths:
       - 'packages/core/**'
       - '.github/workflows/core.yml'
       - 'package.json'
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main, alpha ]
     paths:
       - 'packages/core/**'
       - '.github/workflows/core.yml'
