--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,6 +7,10 @@ on:
       - alpha
 
 jobs:
+  # run the monorepo.yml to confirm all tests, linting and formatting is passing
+  monorepo:
+    uses: ./.github/workflows/pr-check.yml
+
   release:
     name: Release
     runs-on: ubuntu-latest
