--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf dist",
+    "test": "echo \"Passing\"",
     "lint:fix": "biome check --write --unsafe",
     "lint:check": "biome check --unsafe",
     "format:fix": "biome format --write",
