chore(changeset): add autocommit config to changeset
This will tell changeset to commit version bumps back to the repo

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,7 +1,9 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.1.1/schema.json",
   "changelog": "@changesets/cli/changelog",
-  "commit": false,
+  "commit": true,
+  "skipCI": true,
+  "message": "chore(release): version packages",
   "fixed": [],
   "linked": [],
   "access": "public",
