RELEASING: Releasing 3 package(s)
Releases:
  @ar.io/wayfinder-core@0.0.3-alpha.1
  @ar.io/wayfinder-extension@0.0.16-alpha.1
  @ar.io/wayfinder-react@0.0.3-alpha.1

[skip ci]

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ar.io/wayfinder-core",
-  "version": "0.0.3-beta.0",
+  "version": "0.0.3-alpha.1",
   "description": "WayFinder core library for intelligently routing to optimal AR.IO gateways",
   "main": "dist/index.js",
   "module": "dist/index.js",
