--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ar.io/wayfinder-react",
-  "version": "0.0.3-alpha.1",
+  "version": "0.0.3-alpha.2",
   "description": "React components for WayFinder",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -10,7 +10,12 @@
   "publishConfig": {
     "access": "public"
   },
-  "files": ["dist", "package.json", "README.md", "LICENSE"],
+  "files": [
+    "dist",
+    "package.json",
+    "README.md",
+    "LICENSE"
+  ],
   "author": {
     "name": "Permanent Data Solutions Inc",
     "email": "info@ar.io",
@@ -30,7 +35,7 @@
     "format:check": "biome format"
   },
   "dependencies": {
-    "@ar.io/wayfinder-core": "0.0.3-alpha.1",
+    "@ar.io/wayfinder-core": "0.0.3-alpha.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
