--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@ar.io/sdk": "^3.5.0",
-    "@ar.io/wayfinder-core": "*",
+    "@ar.io/wayfinder-core": "0.0.3-alpha.6",
     "@permaweb/aoconnect": "0.0.69",
     "lucide": "^0.514.0"
   },
