--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,12 +7,7 @@
   "types": "dist/index.d.ts",
   "type": "module",
   "license": "Apache-2.0",
-  "keywords": [
-    "ar-io",
-    "arweave",
-    "wayfinder",
-    "ar://"
-  ],
+  "keywords": ["ar-io", "arweave", "wayfinder", "ar://"],
   "author": {
     "name": "Permanent Data Solutions Inc",
     "email": "info@ar.io",
@@ -21,12 +16,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "files": [
-    "dist",
-    "package.json",
-    "README.md",
-    "LICENSE"
-  ],
+  "files": ["dist", "package.json", "README.md", "LICENSE"],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -41,11 +31,11 @@
     "build": "npm run clean && tsc",
     "clean": "rimraf dist",
     "test": "npm run test:unit",
-    "test:unit": "c8 tsx --enable-source-maps --trace-uncaught --trace-warnings --trace-deprecation src/**/*.test.ts",
-    "lint:fix": "biome check --write --unsafe",
-    "lint:check": "biome check --unsafe",
-    "format:fix": "biome format --write",
-    "format:check": "biome format"
+    "test:unit": "c8 tsx --test 'src/**/*.test.ts'",
+    "lint:fix": "biome check --write --unsafe --config-path=../../biome.json",
+    "lint:check": "biome check --unsafe --config-path=../../biome.json",
+    "format:fix": "biome format --write --config-path=../../biome.json",
+    "format:check": "biome format --config-path=../../biome.json"
   },
   "dependencies": {
     "@dha-team/arbundles": "^1.0.3",
