RELEASING: Releasing 3 package(s)
Releases:
  @ar.io/wayfinder-core@0.0.4
  @ar.io/wayfinder-extension@0.0.17
  @ar.io/wayfinder-react@0.0.4

[skip ci]

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ar.io/wayfinder-core",
-  "version": "0.0.4-alpha.1",
+  "version": "0.0.4",
   "description": "WayFinder core library for intelligently routing to optimal AR.IO gateways",
   "main": "dist/index.js",
   "module": "dist/index.js",
