--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ar.io/wayfinder-extension",
-  "version": "0.0.17-alpha.1",
+  "version": "0.0.17",
   "description": "WayFinder Chrome extension that intelligently routes users to optimal AR.IO gateways",
   "private": true,
   "type": "module",
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@ar.io/sdk": "^3.5.0",
-    "@ar.io/wayfinder-core": "0.0.4-alpha.1",
+    "@ar.io/wayfinder-core": "0.0.4",
     "@permaweb/aoconnect": "0.0.69"
   }
 }
