--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ar.io/wayfinder-react",
-  "version": "0.0.4",
+  "version": "0.0.5-alpha.0",
   "description": "React components for WayFinder",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -35,7 +35,7 @@
     "format:check": "biome format"
   },
   "dependencies": {
-    "@ar.io/wayfinder-core": "0.0.4",
+    "@ar.io/wayfinder-core": "0.0.5-alpha.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
