chore(logger): move logger to separate file, update utils

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "sourceMap": true,
     "baseUrl": "."
   },
-  "include": ["packages/**/*.ts", "packages/**/*.tsx"],
+  "include": ["packages/**/*.ts", "packages/**/*.tsx", "scripts/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
