--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,7 +42,12 @@
     "arweave": "^1.14.0",
     "eventemitter3": "^5.0.1",
     "plimit-lit": "^3.0.1",
-    "rfc4648": "^1.5.4"
+    "rfc4648": "^1.5.4",
+    "@opentelemetry/api": "^1.8.0",
+    "@opentelemetry/sdk-trace-node": "^1.8.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^1.8.0",
+    "@opentelemetry/resources": "^1.8.0",
+    "@opentelemetry/semantic-conventions": "^1.8.0"
   },
   "peerDependencies": {
     "@ar.io/sdk": ">=3.12.0"
